# MachineCat

./: .cloudflared-domain  .env.example  .gitignore  HACKATHON_ANALYSIS.md  HACKATHON_COMPLIANCE.md  PRODUCT_DESIGN.md  README.md  README_EN.md  cloudflared-manager.service  cloudflared-manager.sh  com.machinecat.cloudflared-manager.plist  complete_project_analysis_v4.md  deploy-devnet.sh  deploy.sh  development_plan.md  docker-compose.yml  setup-devnet.sh  start-cloudflared.sh  stop-cloudflared.sh  switch-network.sh
docs/: USER_SYSTEM_PLAN.md
redirect-app/: package-lock.json  package.json  update-url.sh
robot-app/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json
robot-contract/: Anchor.toml  CONTRACT_API.md  README.md  package-lock.json
robot-mqtt-service/: .env.example  Dockerfile  package.json
robot-server/: .gitignore  Dockerfile  HTTP_GUIDE.md  README.md  docker-entrypoint.sh  package-lock.json  package.json  test-defillama.js  test-match.js  test_http.js  virtual_robot.js
robot-sim-ros2/: DEPLOYMENT.md  DOCKER_MIRROR.md  Dockerfile  Dockerfile.alternative  README.md  docker-compose.yml  docker-proxy-config.json  nginx.conf  setup.sh  supervisord.conf
robot-sim-ros2/src/machinecat_robot/: CMakeLists.txt  package.xml
robot-sim-ros2/src/machinecat_robot/launch/: gazebo.launch.py
robot-sim-ros2/src/machinecat_robot/scripts/: obstacle_avoidance.py  teleop_keyboard.py
robot-sim-ros2/src/machinecat_robot/urdf/: machinecat.urdf
robot-sim-ros2/src/machinecat_robot/worlds/: room.world
scripts/: cloudflared-manager.sh  start-cloudflared.sh  stop-cloudflared.sh
(+70 files in other folders)
