<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypenamespace="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>machinecat_robot</name>
  <version>1.0.0</version>
  <description>MachineCat ROS2 Simulated Mobile Robot - A beginner-level simulated mobile robot built with ROS 2 + Gazebo</description>
  <maintainer email="your_email@example.com">MachineCat Team</maintainer>
  <license>ISC</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
